# GLPS

./: .gitignore  CMakeLists.txt  DoxyFile  Makefile  readme.md  test.c  test2  win32.c
dev_scripts/: buildwin32.sh
examples/: 3d_cam  3d_cam.c  3d_cube  3d_cube.c  sine_wave  sine_wave.c  test  test.c  test2
examples/glad/: glad.c
include/: egl_context.h  glps_common.h  glps_config.h  glps_egl_context.h  glps_opengl.h  glps_wayland.h  glps_wgl_context.h  glps_win32.c  glps_win32.h  glps_window_manager.h
internal/: glps_common.h  glps_wayland.h  glps_wgl_context.h  glps_win32.h  glps_x11.h  shaders.h
internal/glad/: glad.h
internal/utils/: wayland_utils.h
internal/utils/logger/: pico_logger.h
src/: egl_context.c  glps_egl_context.c  glps_opengl.c  glps_wayland.c  glps_wgl_context.c  glps_win32.c  glps_window_manager.c  glps_x11.c
src/glad/: glad.c
src/utils/: wayland_utils.c
src/utils/logger/: pico_logger.c
